--- a/style/style.css
+++ b/style/style.css
@@ -361,16 +361,13 @@ div {
 .filter {
     background-color: white;
     border-bottom: 2px solid #efeef1;
-    padding-left: 23%; 
+    padding-left: 23%;
 }
-
- 
 
 .active {
     font-family: "OpenSansSemiBold", Times, Sans-serif;
     font-size: 16px;
     color: #ff5600;
-    
 }
 
 .active-no {
@@ -386,8 +383,6 @@ div {
 .filter span {
     margin-left: 50px;
     margin-right: 50px;
-
-
 }
 /* END filter*/
 /********************************************************************************/
@@ -407,17 +402,15 @@ article {
 
 .center-feed {
     margin-top: 20px;
-    
     height: 180px;
     float: left;
-    width: 300px;;
+    width: 300px;
+    ;
 }
 
 .img-feed {
     float: left;
 }
-
-
 
 .user_foto {
     width: 180px;
@@ -446,7 +439,6 @@ article {
 .close-icon-feed {
     float: right;
     padding-right: 15px;
-     
 }
 
 .histor-feed {
@@ -456,15 +448,22 @@ article {
     font-size: 14px;
     color: #9e9e9e;
     text-align: right;
-    
     margin-top: 20px;
 }
+
 .circl-icon {
-    
     float: left;
     left: 400px;
     width: 40px;
-     
-    
 }
 
+.icons img {
+    width: 30px;
+    height: 20px;
+}
+
+.icons span {
+    font-family: "OpenSansLight", Times, Sans-serif;
+    font-size: 14px;
+    color: #8e8e8e;
+}
