--- a/style/style.css
+++ b/style/style.css
@@ -267,13 +267,13 @@ div {
     height: 80px;
 }
 .logo {
-    float: left;
-    color: white;
-    padding-top: 20px;
+    float: left; 
     width: 93%;
 }
 
 .logo img {
+    display: block;
+    padding-top: 20px;
     padding-left: 35%;
     width: 229px;
     height: 50px;
@@ -359,7 +359,7 @@ div {
 .filter {
     background-color: white;
     border-bottom: 2px solid #efeef1;
-    padding-left: 23%;
+    padding-left: 21%;
 }
 
 .active {
